Final update, I think I finished everything however the download button only downloads the first image and I can't care enought to fix the bug so who cares anyway I kinda did it.

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hobbies</title>
     <link rel="stylesheet" href="hobbies.css" />
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -113,11 +114,44 @@
         </button>
       </div>
     </div>
-    <div class="hobby-section plants-section">
-      <div class="mainPlant-container">
-        <img class="main-image" src="Plants/plantMainTemporary.png" />
+    <div class="hobby-section origami-section">
+      <div class="mainImage-container">
+        <img class="main-image" src="Plants/3plantMainTemporary.png" />
       </div>
-      <div class="random"></div>
+      <div class="plant-gallery">
+        <div class="column" id="column03">
+          <!-- <div class="image-container">
+            <img class="origami-image" src="Origami/20230430_091602.jpg" />
+            <div class="top-overlay">
+              <span class="image-number">1/2</span>
+              <i class="fa-solid fa-arrow-right-long"></i>
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </div>
+            <div class="bottom-overlay">
+              <a class="icon-box" href="https://jonakashima.com.br/">
+                <i class="fa-solid fa-circle-info"></i>
+                <span class="icon-text">Jo Nakashima</span>
+              </a>
+              <a
+                class="icon-box"
+                href="Origami/20230430_091602.jpg"
+                download="Origami-image">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                <span class="icon-text">Download</span>
+              </a>
+            </div>
+          </div> -->
+        </div>
+        <div class="column" id="column04"></div>
+      </div>
+      <div class="show-more-container">
+        <button id="toggleButton2">
+          <i class="fa fa-chevron-down"></i>
+          Show More
+        </button>
+      </div>
+    </div>
+      <!-- <div class="random"></div> -->
       <div id="imageModal" class="modal">
         <i id="close" class="fa-solid fa-xmark"></i>
         <!-- <div class="modal-content"> -->
